examples/modules/valid/app/from_import.axom
from math.utils import add, sub

print add(10, 4)
print sub(10, 4)
