examples/modules/invalid/conflict_import.axom
from invalid.conflict_a import add
from invalid.conflict_b import add

print add(1, 2)
